# senedd-plenary-scrape

./: .env.template  .gitignore  ARCHITECTURE.md  MCP_TESTING.md  MONOREPO_PLAN.md  Makefile  NOTES.md  PLAN.md  PRODUCTION.md  README.md  alembic.ini  main.py  package-lock.json  package.json  parser_task.md  pnpm-lock.yaml  pyproject.toml  refactor.md  todo.md
.claude/: CLAUDE.md
.github/workflows/: ci.yml  eval.yml  sync.yml
alembic/: README  env.py
alembic/versions/: 764c34b20b0e_add_votes_and_vote_records_tables.py  a4f19a6ba949_baseline_schema.py  ad71d7f96137_add_embedding_cache_table.py
analysis/: wpm_fidelity.py
apps/web/: .env.example  PRD.md  next.config.ts  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/ask/: route.ts
apps/web/src/app/api/meetings/: route.ts
apps/web/src/app/api/meetings/[id]/transcript/: route.ts
apps/web/src/app/meetings/[id]/: page.tsx
apps/web/src/components/: AskPanel.tsx  CitationCard.tsx  ResizeHandle.tsx  SearchPane.tsx  TranscriptPane.tsx  VideoPane.tsx  Workspace.tsx
apps/web/src/hooks/: useResizable.ts
apps/web/src/lib/: agenda.ts  ask.ts  db.ts  mock-ask.ts  queries.ts  tv.ts  types.ts
experiments/: README.md
experiments/configs/: gemma-small-chunks.yaml  openai-small.yaml
queries/: 01_basic.sql  02_reconstruction.sql  03_members.sql  04_meetings.sql  05_validation.sql  06_admin.sql  07_analysis.sql  README.md  test-queries.sql
scripts/: backfill.py  backfill_embedding_cache.py  backfill_webcast_guids.py  query_speeches.py  seed_fixture.py
services/data/: pyproject.toml
services/data/alembic/: README  env.py
services/data/alembic/versions/: 2d7b930b3b8a_add_speech_fidelity_table.py  7a0d6f8bf14c_polymorphic_embeddings_add_source_type_.py  7c1e757d7577_add_written_contributions_table_for_qnr.py  b1e2c3d4f5a6_add_webcast_guid_to_meetings.py  fccbf37e6bae_add_artifact_watch_table_for_late_.py
services/data/senedd_data/: __init__.py  acquisition.py  db_schema.py  fidelity.py  model_registry.py  pipeline.py  provisioning.py  session.py  settings.py  transformation.py  transformers.py  webcast.py
services/data/senedd_data/procedures/: 002_purge_all_tables.sql
services/embeddings/: pyproject.toml
services/embeddings/experiments/: README.md  RESULTS.md  runs.jsonl
services/embeddings/experiments/configs/: baseline-gemma.yaml  gemma-whole-speech.yaml
services/embeddings/senedd_embeddings/: cache.py  chunker.py  config.py  embed.py  pipeline.py  providers.py
services/embeddings/senedd_embeddings/experiments/: __init__.py  config.py  embedder.py  evaluation.py  results.py  runner.py
services/mcp/: pyproject.toml
services/mcp/senedd_mcp/: README.md  __init__.py  __main__.py  formatting.py  server.py
services/mcp/senedd_search/: __init__.py  _dates.py  lookups.py  service.py
src/: __init__.py  data.py  db.py  db_schema.py  fetcher.py  parse_plenary.py  parser.py  pipeline.py  transformers.py  upsert.py
src/db/: acquisition.py  db_schema.py  fetcher.py  fidelity.py  parser.py  pipeline.py  provisioning.py  session.py  settings.py  transformation.py  transformers.py
src/db/procedures/: 001_purge_downstream.sql  003_purge_embedding_cache.sql
src/embeddings/: __init__.py  base.py  cache.py  chunker.py  embed.py  pipeline.py  providers.py  run.py
src/experiments/: __init__.py  config.py  embedder.py  evaluation.py  results.py  runner.py
src/mcp_server/: README.md  __init__.py  __main__.py  formatting.py  server.py
src/search/: __init__.py  lookups.py  service.py
tests/: test_embedding_cache.py  test_eval_metrics.py  test_experiments.py  test_fetcher.py  test_fidelity.py  test_mcp_formatting.py  test_qnr_parser.py  test_search_lookups.py  test_semantic_search.py  test_votes_parser.py
tests/eval/: BASELINE.md  __init__.py  cases.yaml  loader.py  metrics.py  runner.py
tests/fixtures/: 260616_Plenary_Bilingual.xml  qnr_sample.xml  votes_sample.xml
