[project]
name = "senedd-scrape"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "lxml>=6.1.1",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
]

[project.optional-dependencies]
openai = [
    "openai>=2.40.0",
]
sentence-transformer = [
    "sentence-transformers>=5.5.1",
]
ollama = [
    "ollama>=0.6.2",
]
