[project]
name = "senedd-scrape"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "bs4>=0.0.2",
    "lxml>=6.1.1",
    "ollama>=0.6.2",
    "pandas>=3.0.3",
    "pgvector>=0.4.2",
    "psycopg2>=2.9.12",
    "pydantic-settings>=2.14.1",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
    "sqlalchemy-utils>=0.42.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[project.optional-dependencies]
openai = [
    "openai>=2.40.0",
]
sentence-transformer = [
    "sentence-transformers>=5.5.1",
]
