[project]
name = "senedd-monorepo"
version = "0.1.0"
description = "Senedd plenary data platform — workspace root composing the data, embeddings and MCP services"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "senedd-data",
    "senedd-embeddings",
    "senedd-mcp",
]

[dependency-groups]
dev = [
    "matplotlib>=3.11.0",
    "pytest>=8.0.0",
    "pyyaml>=6.0",
]

# Convenience extras forwarded to the embeddings service's optional providers.
[project.optional-dependencies]
openai = ["senedd-embeddings[openai]"]
sentence-transformer = ["senedd-embeddings[sentence-transformer]"]

[tool.uv.workspace]
members = ["services/*"]

[tool.uv.sources]
senedd-data = { workspace = true }
senedd-embeddings = { workspace = true }
senedd-mcp = { workspace = true }

# The root project is a virtual composition target: main.py, scripts/, tests/
# and analysis/ run against the workspace venv but nothing imports "senedd_monorepo".
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.pytest.ini_options]
testpaths = ["tests"]
