[project]
name = "senedd-data"
version = "0.1.0"
description = "Senedd data service: acquisition, transformation, provisioning, settings, session factory"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "bs4>=0.0.2",
    "lxml>=6.1.1",
    "pandas>=3.0.3",
    "pgvector>=0.4.2",
    "psycopg2>=2.9.12",
    "pydantic-settings>=2.14.1",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
    "sqlalchemy-utils>=0.42.1",
    "typing-extensions>=4.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["senedd_data"]
