[project]
name = "senedd-embeddings"
version = "0.1.0"
description = "Senedd embeddings service: providers, chunking, content-addressed cache, sweep, experiment harness"
requires-python = ">=3.13"
dependencies = [
    "ollama>=0.6.2",
    "pyyaml>=6.0",
    "senedd-data",
]

[project.optional-dependencies]
openai = ["openai>=2.40.0"]
sentence-transformer = ["sentence-transformers>=5.5.1"]

[tool.uv.sources]
senedd-data = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["senedd_embeddings"]
