[project]
name = "senedd-mcp"
version = "0.1.0"
description = "Senedd retrieval service (semantic search + structured lookups) and the MCP surface over it"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.28.0",
    "senedd-data",
    "senedd-embeddings",
]

[tool.uv.sources]
senedd-data = { workspace = true }
senedd-embeddings = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["senedd_search", "senedd_mcp"]
